grammar.ebnf
source = node*;

node = STRING | tag;

tag = IDENTIFIER ( '(' attributes ')' )? '{' node* '}';

attributes = attribute (',' attribute)*;

attribute = IDENTIFIER ':' literal;

literal = NUMBER | STRING | list | range;

list = '[' (literal (',' literal))? ']';

range = NUMBER '..' NUMBER?;
